--- a/code/API_definitions/connected-network-type.yaml
+++ b/code/API_definitions/connected-network-type.yaml
@@ -33,7 +33,11 @@ info:
 
     The endpoint `POST /retrieve` allows to get connected Network Type.
 
-    # Identifying the device from the access token
+    # Further info and support
+
+    (FAQs will be added in a later version of the documentation)
+
+    ### Identifying the device from the access token
 
     This API requires the API consumer to identify a device as the subject of the API as follows:
     - When the API is invoked using a two-legged access token, the subject will be identified from the optional `device` object, which therefore MUST be provided.
@@ -46,10 +50,6 @@ info:
     - If the subject cannot be identified from the access token and the optional `device` object is not included in the request, then the server will return an error with the `422 MISSING_IDENTIFIER` error code.
 
     - If the subject can be identified from the access token and the optional `device` object is also included in the request, then the server will return an error with the `422 UNNECESSARY_IDENTIFIER` error code. This will be the case even if the same device is identified by these two methods, as the server is unable to make this comparison.
-
-    ## Further info and support
-
-    (FAQs will be added in a later version of the documentation)
 
     ### Multi-SIM scenario handling
 
