--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -1144,7 +1144,7 @@ components:
                 properties:
                   status:
                     enum:
-                      - 401
+                      - 403
                   code:
                     enum:
                       - PERMISSION_DENIED
@@ -1373,7 +1373,7 @@ components:
                       - 503
                   code:
                     enum:
-                      - SERVICE_UNAVAILABLE
+                      - UNAVAILABLE
           examples:
             GENERIC_503_UNAVAILABLE:
               description: Service is not available. Temporary situation usually related to maintenance process in the server side
