--- a/code/API_definitions/device-roaming-status-subscriptions.yaml
+++ b/code/API_definitions/device-roaming-status-subscriptions.yaml
@@ -46,6 +46,44 @@ info:
       - the Access Token `sinkCredential` (optionally set by the requester) expiration time has been reached
       - the API server has to stop sending notification prematurely
 
+    **Note on combined usage of ``initialEvent`` and ``subscriptionMaxEvents``**: 
+    
+    If an event is triggered following ``initialEvent`` set to true, 
+    this event will be counted towards ``subscriptionMaxEvents`` (if provided). 
+
+    **Clarification on ``initialEvent`` & ``event-type`` behaviour:**
+
+    Following table illustrate behaviour regarding event triggering depending on **initial** roaming state of the device:
+
+    | subscrived event-type | device roaming status at subscription time | event send if ``initialEvent`` set to true |
+    | ----------------------| ------------- | --------------- |
+    | roaming-status  | Roaming On |   Yes |
+    | roaming-status  | Roaming Off | Yes |
+    | roaming-on  | Roaming On | Yes |
+    | roaming-on  | Roaming Off | No |
+    | roaming-off  | Roaming On | No |
+    | roaming-off  | Roaming Off | Yes |
+    | roaming-change-country  | Roaming Off | No(*) |
+    | roaming-change-country  | Roaming On | No(*) |
+
+    (*) Use of ``initialEvent`` has no impact on roaming-change-country event-type.
+
+    **Clarification on ``roaming-change-country`` event-type:**
+
+    ``roaming-change-country`` event is send only when the device stays in roaming situation and change country.
+    Suppose a device from Germany & all event types subscribed:
+
+    - Device moves from Germany to France:
+        - triggered: roaming-status & roaming-on
+        - not triggered: roaming-change-country & roaming-off
+    - Device moves from France to Belgium:
+        - triggered: roaming-change-country
+        - not triggered: roaming-status,  roaming-on & roaming-off
+    - Device moves from Belgium back to Germany
+        - triggered: roaming-status & roaming-off
+        - not triggered: roaming-on & roaming-change-country
+
+
     ### Notifications callback
 
     This endpoint describes the event notification received on subscription listener side when the event occurred.
