--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -44,6 +44,26 @@ info:
       - the Access Token `sinkCredential` (optionally set by the requester) expiration time has been reached
       - the API server has to stop sending notification prematurely
 
+    **Note on combined usage of ``initialEvent`` and ``subscriptionMaxEvents``**: 
+    
+    If an event is triggered following ``initialEvent`` set to true, 
+    this event will be counted towards ``subscriptionMaxEvents`` (if provided). 
+
+        
+    **Clarification on ``initialEvent`` & ``event-type`` behaviour:**
+
+    Following table illustrate behaviour regarding event triggering depending on **initial** reachability state of the device:
+
+    | subscrived event-type | device reachability status at subscription time | event send if ``initialEvent`` set to true |
+    | ----------------------| ------------- | --------------- |
+    | reachability-data  | OK for data usage |   Yes |
+    | reachability-data  | disconnected or only SMS | No |
+    | reachability-sms  | OK for data usage | No |
+    | reachability-sms  |  only SMS | Yes |
+    | reachability-sms  | disconnected | No |
+    | reachability-disconnected  | OK for Data or SMS usage | No |
+    | reachability-disconnected  | disconnected | Yes |
+
     ### Notifications callback
 
     This endpoint describes the event notification received on subscription listener side when the event occurred.
