--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -1244,7 +1244,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     REACHABILITY_SMS:
       value:
@@ -1257,7 +1257,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     REACHABILITY_DISCONNECTED:
       value:
@@ -1270,7 +1270,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     SUBSCRIPTION_ENDS:
       value:
@@ -1284,7 +1284,7 @@ components:
             phoneNumber: +123456789
           terminationReason: SUBSCRIPTION_EXPIRED
           subscriptionId: qs15-h556-rt89-1298
-        time: 2024-03-22T05:40:23.682Z
+        time: "2024-03-22T05:40:23.682Z"
 
     SUBSCRIPTION_ACTIVE:
       value:
@@ -1297,11 +1297,11 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: ACTIVE
 
     SUBSCRIPTION_ACTIVATION_REQUESTED:
@@ -1315,11 +1315,11 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: ACTIVATION_REQUESTED
 
     SUBSCRIPTION_DELETED:
@@ -1333,9 +1333,9 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: DELETED
